# cheems-discord-bot

./: README.md  facts.txt  main.py  pyproject.toml  requirements.txt
cogs/: RPSsingleplayer.py  api.py  api_aki.py  coinguess.py  diceguess.py  event.py  facts.py  hangman.py  helpinfo.py  helpmenu.py  moderation.py  reddit.py  rr.py  userinfo.py  utility.py  wiki.py
